minor configuration change

--- a/server/src/configuration/configuration.properties
+++ b/server/src/configuration/configuration.properties
@@ -18,10 +18,10 @@ smtpPassword:
 
 filePath: files
 
-resizedImagePath: images
-imageMagickPath: /usr/local/bin
+resizedImagePath: /tmp/server/images
+imageMagickPath: /usr/bin
 
-logInfoPath: logs/info.log
-logDebugPath: logs/debug.log
-logAccessPath: logs/access.log
+logInfoPath: /tmp/server/logs/info.log
+logDebugPath: /tmp/server/logs/debug.log
+logAccessPath: /tmp/server/logs/access.log
 logEmailRecipients: 
